tcc3/manifests/ingress-controller/http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Service-Type: HTTP";
      more_set_headers "X-Protocol: HTTP/1.1";
spec:
  rules:
  - http:
      paths:
      - path: /http(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: http-service
            port:
              number: 8080
